--- a/smart-calendar/src/app/shared/components/confirm-dialog/confirm-dialog.html
+++ b/smart-calendar/src/app/shared/components/confirm-dialog/confirm-dialog.html
@@ -40,7 +40,7 @@
       <div class="checkbox-options" *ngIf="checkboxOptions && checkboxOptions.length > 0">
         <mat-checkbox *ngFor="let option of checkboxOptions; trackBy: trackByOption"
                      [(ngModel)]="option.checked"
-                     [disabled]="option.disabled">
+                     [disabled]="option.disabled || false">
           {{ option.label }}
         </mat-checkbox>
       </div>
