--- a/smart-calendar/src/app/shared/components/confirm-dialog/confirm-dialog.html
+++ b/smart-calendar/src/app/shared/components/confirm-dialog/confirm-dialog.html
@@ -3,10 +3,10 @@
     <div class="dialog-icon" [class]="'icon-' + type">
       <mat-icon [class]="'icon-' + type">{{ getIcon() }}</mat-icon>
     </div>
-    <h2 mat-dialog-title id="confirm-dialog-title">{{ title }}</h2>
+    <h2 id="confirm-dialog-title">{{ title }}</h2>
   </div>
 
-  <mat-dialog-content class="dialog-content">
+  <div class="dialog-content">
     <div class="message-content">
       <p class="primary-message">{{ message }}</p>
       <p class="secondary-message" *ngIf="details">{{ details }}</p>
@@ -45,9 +45,9 @@
         </mat-checkbox>
       </div>
     </div>
-  </mat-dialog-content>
+  </div>
 
-  <mat-dialog-actions align="end" class="dialog-actions">
+  <div class="dialog-actions">
     <button mat-button
             (click)="onCancel()"
             [disabled]="isProcessing"
@@ -64,5 +64,5 @@
       <mat-icon *ngIf="!isProcessing">{{ getConfirmIcon() }}</mat-icon>
       <span>{{ isProcessing ? 'Processando...' : (confirmText || 'Confirmar') }}</span>
     </button>
-  </mat-dialog-actions>
+  </div>
 </div>
